fixed open toggle button on iphone

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -585,9 +585,7 @@ header{
   padding: .5rem .1rem;
   margin-top: .3rem;
   text-align: start;
-  white-space: nowrap;
   text-overflow: ellipsis;
-
 }
 
 .author__card-info-title h3{
@@ -1631,7 +1629,7 @@ input[type="checkbox"]{
 
 
 }@media screen and (min-width:768px ) {
-  
+
 
 }@media screen and (min-width:950px ) {
   .celebrity{
@@ -1663,7 +1661,7 @@ input[type="checkbox"]{
   .author__card{
     height: 350px;
   }
-  
+
 }
 main{
   margin-top: 5rem;
